--- a/sections/custom-image-with-text.liquid
+++ b/sections/custom-image-with-text.liquid
@@ -21,7 +21,7 @@
   }
 
   .section-{{ section.id }}-padding .image-with-text__content {
-    padding: 4rem calc(2rem / var(--font-body-scale)) 5rem;
+    padding: 4rem 0 5rem;
   }
 
   @media (min-width: 768px) {
