--- a/sections/custom-image-with-text.liquid
+++ b/sections/custom-image-with-text.liquid
@@ -117,6 +117,49 @@
       justify-content: flex-start;
     }
   }
+  .attributes-block {
+    margin-top: 2.5rem;
+  }
+  .attributes-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2.5rem 2rem;
+  }
+  .attribute-item {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    gap: 1.5rem;
+    white-space: nowrap;
+  }
+  @media (min-width: 1024px) {
+    .attribute-item {
+      flex-flow: row nowrap;
+    }
+  }
+  .attribute-icon {
+    /* background: #fff; */
+    /* border: 2px solid #e87fc7; */
+    /* border-radius: 1.5rem; */
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .attribute-icon img {
+    /* width: 48px;
+    height: 48px; */
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  .attribute-details {
+    font-size: 1.25rem;
+    color: #222;
+    font-weight: 500;
+    line-height: 1.3;
+  }
 {%- endstyle -%}
 
 {%- liquid
@@ -195,6 +238,33 @@
                 {%- when 'text' -%}
                   <div class="image-with-text__text rte {{ block.settings.text_style }}" {{ block.shopify_attributes }}>
                     {{ block.settings.text }}
+                  </div>
+                {%- when 'attributes' -%}
+                  <div class="attributes-block">
+                    <div class="attributes-grid">
+                      {% for i in (1..4) %}
+                        <div class="attribute-item">
+                          {% assign icon_key = 'icon_' | append: i %}
+                          {% assign details_key = 'details_' | append: i %}
+                          {% assign icon = block.settings[icon_key] %}
+                          {% assign details = block.settings[details_key] %}
+                          {% if icon != blank %}
+                            <div class="attribute-icon">
+                              <img
+                                src="{{ icon | image_url: width: 80, height: 80 }}"
+                                alt=""
+                                width="64"
+                                height="64"
+                                loading="lazy"
+                              >
+                            </div>
+                          {% endif %}
+                          <div class="attribute-details">
+                            {{ details }}
+                          </div>
+                        </div>
+                      {% endfor %}
+                    </div>
                   </div>
                 {%- when 'button' -%}
                   {%- if block.settings.button_label != blank -%}
@@ -632,12 +702,32 @@
           "default": "Zaria McCray"
         }
       ]
+    },
+    {
+      "type": "attributes",
+      "name": "Attributes",
+      "settings": [
+        { "type": "image_picker", "id": "icon_1", "label": "Icon 1" },
+        { "type": "richtext", "id": "details_1", "label": "Details 1" },
+        { "type": "image_picker", "id": "icon_2", "label": "Icon 2" },
+        { "type": "richtext", "id": "details_2", "label": "Details 2" },
+        { "type": "image_picker", "id": "icon_3", "label": "Icon 3" },
+        { "type": "richtext", "id": "details_3", "label": "Details 3" },
+        { "type": "image_picker", "id": "icon_4", "label": "Icon 4" },
+        { "type": "richtext", "id": "details_4", "label": "Details 4" }
+      ]
     }
   ],
   "presets": [
     {
       "name": "Custom Image with Text",
-      "blocks": [{ "type": "heading" }, { "type": "text" }, { "type": "button" }, { "type": "testimonial" }]
+      "blocks": [
+        { "type": "heading" },
+        { "type": "text" },
+        { "type": "button" },
+        { "type": "testimonial" },
+        { "type": "attributes" }
+      ]
     }
   ]
 }
