--- a/sections/custom-image-with-text.liquid
+++ b/sections/custom-image-with-text.liquid
@@ -129,36 +129,57 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    gap: 1.5rem;
-    white-space: nowrap;
-  }
-  @media (min-width: 1024px) {
-    .attribute-item {
-      flex-flow: row nowrap;
-    }
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
   }
   .attribute-icon {
-    /* background: #fff; */
-    /* border: 2px solid #e87fc7; */
-    /* border-radius: 1.5rem; */
     width: 5rem;
     height: 5rem;
     display: flex;
     align-items: center;
     justify-content: center;
   }
+
   .attribute-icon img {
-    /* width: 48px;
-    height: 48px; */
     width: 100%;
     height: 100%;
     object-fit: contain;
   }
   .attribute-details {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
     color: #222;
     font-weight: 500;
     line-height: 1.3;
+    text-align: center;
+    word-break: break-word;
+    white-space: normal;
+    max-width: 90vw;
+  }
+  .attribute-details h1,
+  .attribute-details h2,
+  .attribute-details h3,
+  .attribute-details h4,
+  .attribute-details h5,
+  .attribute-details h6 {
+    margin-bottom: 0;
+  }
+  @media (min-width: 1024px) {
+    .attribute-item {
+      flex-flow: row nowrap;
+      align-items: center;
+      gap: 1.5rem;
+    }
+    .attribute-details {
+      text-align: left;
+      max-width: none;
+    }
+  }
+  @media (min-width: 1440px) {
+    .attribute-icon {
+      width: 7rem;
+      height: 7rem;
+    }
   }
 {%- endstyle -%}
 
