--- a/sections/custom-image-with-text.liquid
+++ b/sections/custom-image-with-text.liquid
@@ -180,6 +180,95 @@
       height: 7rem;
     }
   }
+  .feature-cards-block-{{ section.id }} {
+    margin-top: 3rem;
+  }
+  .feature-cards-block-{{ section.id }}__row {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 2rem;
+    justify-content: center;
+    align-items: stretch;
+    margin-top: 2.5rem;
+  }
+  .feature-cards-block-{{ section.id }}__card-wrapper {
+    flex: 1 1 0;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    position: relative;
+    min-width: 0;
+  }
+  .feature-cards-block-{{ section.id }}__card {
+    position: relative;
+    background: #fff;
+    border-radius: 1.2rem;
+    box-shadow: -0.5rem 0.5rem 0 0 rgb(255 105 180);
+    padding: 3rem 1rem 2rem;
+    min-width: 0;
+    width: 100%;
+    max-width: 28rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .feature-cards-block-{{ section.id }}__icon {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, -50%);
+    width: 5rem;
+    height: 5rem;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 1.5px -3px 0rem 1px rgb(255 0 128);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+  }
+  .feature-cards-block-{{ section.id }}__icon img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  .feature-cards-block-{{ section.id }}__details {
+    font-size: 1.2rem;
+    line-height: 1.4;
+    text-align: center;
+    word-break: break-word;
+    white-space: normal;
+  }
+  @media (min-width: 768px) {
+    .feature-cards-block-{{ section.id }}__row {
+      gap: 2rem;
+    }
+    .feature-cards-block-{{ section.id }}__card {
+      max-width: 32rem;
+    }
+    .feature-cards-block-{{ section.id }}__icon {
+      width: 6.2rem;
+      height: 6.2rem;
+    }
+    .feature-cards-block-{{ section.id }}__icon img {
+      width: 4rem;
+      height: 4rem;
+    }
+  }
+  @media (min-width: 1440px) {
+    .feature-cards-block-{{ section.id }}__card {
+      max-width: 36rem;
+    }
+    .feature-cards-block-{{ section.id }}__icon {
+      width: 7rem;
+      height: 7rem;
+    }
+    .feature-cards-block-{{ section.id }}__icon img {
+      width: 5rem;
+      height: 5rem;
+    }
+  }
 {%- endstyle -%}
 
 {%- liquid
@@ -338,6 +427,35 @@
                         {{ block.settings.text | replace: '<p>', '<p style="margin: 0;">' }}
                       </div>
                       <div class="testimonial-block-{{ section.id }}__author">-{{ block.settings.author }}</div>
+                    </div>
+                  </div>
+                {%- when 'feature-cards' -%}
+                  <div class="feature-cards-block-{{ section.id }}">
+                    <div class="feature-cards-block-{{ section.id }}__row">
+                      {% for i in (1..2) %}
+                        {% assign icon_key = 'icon_' | append: i %}
+                        {% assign details_key = 'details_' | append: i %}
+                        {% assign icon = block.settings[icon_key] %}
+                        {% assign details = block.settings[details_key] %}
+                        <div class="feature-cards-block-{{ section.id }}__card-wrapper">
+                          <div class="feature-cards-block-{{ section.id }}__card">
+                            {% if icon != blank %}
+                              <div class="feature-cards-block-{{ section.id }}__icon">
+                                <img
+                                  src="{{ icon | image_url: width: 80, height: 80 }}"
+                                  alt=""
+                                  width="64"
+                                  height="64"
+                                  loading="lazy"
+                                >
+                              </div>
+                            {% endif %}
+                            <div class="feature-cards-block-{{ section.id }}__details">
+                              {{ details }}
+                            </div>
+                          </div>
+                        </div>
+                      {% endfor %}
                     </div>
                   </div>
               {%- endcase -%}
@@ -736,6 +854,16 @@
         { "type": "image_picker", "id": "icon_4", "label": "Icon 4" },
         { "type": "richtext", "id": "details_4", "label": "Details 4" }
       ]
+    },
+    {
+      "type": "feature-cards",
+      "name": "Feature Cards",
+      "settings": [
+        { "type": "image_picker", "id": "icon_1", "label": "Icon 1" },
+        { "type": "richtext", "id": "details_1", "label": "Details 1" },
+        { "type": "image_picker", "id": "icon_2", "label": "Icon 2" },
+        { "type": "richtext", "id": "details_2", "label": "Details 2" }
+      ]
     }
   ],
   "presets": [
@@ -746,7 +874,8 @@
         { "type": "text" },
         { "type": "button" },
         { "type": "testimonial" },
-        { "type": "attributes" }
+        { "type": "attributes" },
+        { "type": "feature-cards" }
       ]
     }
   ]
