Update CSS for "Custom Image with Text" section by adding padding to the feature cards block and adjusting the box shadow for improved visual presentation and layout consistency.

--- a/sections/custom-image-with-text.liquid
+++ b/sections/custom-image-with-text.liquid
@@ -186,6 +186,7 @@
   .feature-cards-block-{{ section.id }}__row {
     display: flex;
     flex-flow: row nowrap;
+    padding: 0 1rem;
     gap: 2rem;
     justify-content: center;
     align-items: stretch;
@@ -222,7 +223,7 @@
     height: 5rem;
     background: #fff;
     border-radius: 50%;
-    box-shadow: 1.5px -3px 0rem 1px rgb(255 0 128);
+    box-shadow: 2px -2px 0rem 1px rgb(255 0 128);
     display: flex;
     align-items: center;
     justify-content: center;
