--- a/sections/custom-image-with-text.liquid
+++ b/sections/custom-image-with-text.liquid
@@ -17,7 +17,17 @@
   }
 
   .section-{{ section.id }}-padding .image-with-text__media {
-    border: 0.3rem solid {{ section.settings.image_border_color }} !important;
+    {% if section.settings.media_border_visible %}
+      border: 0.3rem solid {{ section.settings.image_border_color }} !important;
+    {% else %}
+      border: none !important;
+    {% endif %}
+    border-radius: {{ section.settings.media_border_radius }}rem;
+    {% if section.settings.media_box_shadow_visible %}
+      box-shadow: {{ section.settings.media_box_shadow_x_offset }}px {{ section.settings.media_box_shadow_y_offset }}px 0 0 rgba(0,0,0,0.08);
+    {% else %}
+      box-shadow: none;
+    {% endif %}
   }
 
   .section-{{ section.id }}-padding .image-with-text__content {
@@ -436,12 +446,26 @@
                       {% for i in (1..2) %}
                         {% assign icon_key = 'icon_' | append: i %}
                         {% assign details_key = 'details_' | append: i %}
+                        {% assign card_bg_key = 'card_bg_' | append: i %}
+                        {% assign card_radius_key = 'card_radius_' | append: i %}
+                        {% assign card_shadow_color_key = 'card_shadow_color_' | append: i %}
+                        {% assign icon_shadow_color_key = 'icon_shadow_color_' | append: i %}
                         {% assign icon = block.settings[icon_key] %}
                         {% assign details = block.settings[details_key] %}
+                        {% assign card_bg = block.settings[card_bg_key] %}
+                        {% assign card_radius = block.settings[card_radius_key] %}
+                        {% assign card_shadow_color = block.settings[card_shadow_color_key] %}
+                        {% assign icon_shadow_color = block.settings[icon_shadow_color_key] %}
                         <div class="feature-cards-block-{{ section.id }}__card-wrapper">
-                          <div class="feature-cards-block-{{ section.id }}__card">
+                          <div
+                            class="feature-cards-block-{{ section.id }}__card"
+                            style="background: {{ card_bg }}; border-radius: {{ card_radius }}rem; box-shadow: -0.5rem 0.5rem 0 0 {{ card_shadow_color }};"
+                          >
                             {% if icon != blank %}
-                              <div class="feature-cards-block-{{ section.id }}__icon">
+                              <div
+                                class="feature-cards-block-{{ section.id }}__icon"
+                                style="box-shadow: 2px -2px 0rem 1px {{ icon_shadow_color }};"
+                              >
                                 <img
                                   src="{{ icon | image_url: width: 80, height: 80 }}"
                                   alt=""
@@ -486,6 +510,45 @@
       "id": "image_border_color",
       "label": "Image border color",
       "default": "#E5E5E5"
+    },
+    {
+      "type": "checkbox",
+      "id": "media_border_visible",
+      "label": "Show image border",
+      "default": true
+    },
+    {
+      "type": "range",
+      "id": "media_border_radius",
+      "label": "Image border radius (rem)",
+      "min": 0,
+      "max": 4,
+      "step": 0.1,
+      "default": 1.2
+    },
+    {
+      "type": "checkbox",
+      "id": "media_box_shadow_visible",
+      "label": "Show image box shadow",
+      "default": false
+    },
+    {
+      "type": "range",
+      "id": "media_box_shadow_x_offset",
+      "label": "Image box shadow X offset (px)",
+      "min": -50,
+      "max": 50,
+      "step": 1,
+      "default": 0
+    },
+    {
+      "type": "range",
+      "id": "media_box_shadow_y_offset",
+      "label": "Image box shadow Y offset (px)",
+      "min": -50,
+      "max": 50,
+      "step": 1,
+      "default": 0
     },
     {
       "type": "select",
@@ -863,7 +926,31 @@
         { "type": "image_picker", "id": "icon_1", "label": "Icon 1" },
         { "type": "richtext", "id": "details_1", "label": "Details 1" },
         { "type": "image_picker", "id": "icon_2", "label": "Icon 2" },
-        { "type": "richtext", "id": "details_2", "label": "Details 2" }
+        { "type": "richtext", "id": "details_2", "label": "Details 2" },
+        { "type": "color", "id": "card_bg_1", "label": "Card 1 background color", "default": "#fff" },
+        {
+          "type": "range",
+          "id": "card_radius_1",
+          "label": "Card 1 border radius (rem)",
+          "min": 0,
+          "max": 4,
+          "step": 0.1,
+          "default": 1.2
+        },
+        { "type": "color", "id": "card_shadow_color_1", "label": "Card 1 box shadow color", "default": "#FF69B4" },
+        { "type": "color", "id": "icon_shadow_color_1", "label": "Card 1 icon box shadow color", "default": "#FF0080" },
+        { "type": "color", "id": "card_bg_2", "label": "Card 2 background color", "default": "#fff" },
+        {
+          "type": "range",
+          "id": "card_radius_2",
+          "label": "Card 2 border radius (rem)",
+          "min": 0,
+          "max": 4,
+          "step": 0.1,
+          "default": 1.2
+        },
+        { "type": "color", "id": "card_shadow_color_2", "label": "Card 2 box shadow color", "default": "#FF69B4" },
+        { "type": "color", "id": "icon_shadow_color_2", "label": "Card 2 icon box shadow color", "default": "#FF0080" }
       ]
     }
   ],
