--- a/sections/custom-image-with-text.liquid
+++ b/sections/custom-image-with-text.liquid
@@ -22,9 +22,9 @@
     {% else %}
       border: none !important;
     {% endif %}
-    border-radius: {{ section.settings.media_border_radius }}rem;
+    border-radius: {{ section.settings.media_border_radius }}px;
     {% if section.settings.media_box_shadow_visible %}
-      box-shadow: {{ section.settings.media_box_shadow_x_offset }}px {{ section.settings.media_box_shadow_y_offset }}px 0 0 rgba(0,0,0,0.08);
+      box-shadow: {{ section.settings.media_box_shadow_x_offset }}px {{ section.settings.media_box_shadow_y_offset }}px 0 0 {{ section.settings.media_box_shadow_color }} !important;
     {% else %}
       box-shadow: none;
     {% endif %}
@@ -443,23 +443,19 @@
                 {%- when 'feature-cards' -%}
                   <div class="feature-cards-block-{{ section.id }}">
                     <div class="feature-cards-block-{{ section.id }}__row">
+                      {% assign card_bg = block.settings.card_bg %}
+                      {% assign card_radius = block.settings.card_radius %}
+                      {% assign card_shadow_color = block.settings.card_shadow_color %}
+                      {% assign icon_shadow_color = block.settings.icon_shadow_color %}
                       {% for i in (1..2) %}
                         {% assign icon_key = 'icon_' | append: i %}
                         {% assign details_key = 'details_' | append: i %}
-                        {% assign card_bg_key = 'card_bg_' | append: i %}
-                        {% assign card_radius_key = 'card_radius_' | append: i %}
-                        {% assign card_shadow_color_key = 'card_shadow_color_' | append: i %}
-                        {% assign icon_shadow_color_key = 'icon_shadow_color_' | append: i %}
                         {% assign icon = block.settings[icon_key] %}
                         {% assign details = block.settings[details_key] %}
-                        {% assign card_bg = block.settings[card_bg_key] %}
-                        {% assign card_radius = block.settings[card_radius_key] %}
-                        {% assign card_shadow_color = block.settings[card_shadow_color_key] %}
-                        {% assign icon_shadow_color = block.settings[icon_shadow_color_key] %}
                         <div class="feature-cards-block-{{ section.id }}__card-wrapper">
                           <div
                             class="feature-cards-block-{{ section.id }}__card"
-                            style="background: {{ card_bg }}; border-radius: {{ card_radius }}rem; box-shadow: -0.5rem 0.5rem 0 0 {{ card_shadow_color }};"
+                            style="background: {{ card_bg }}; border-radius: {{ card_radius }}px; box-shadow: -0.5rem 0.5rem 0 0 {{ card_shadow_color }};"
                           >
                             {% if icon != blank %}
                               <div
@@ -520,17 +516,23 @@
     {
       "type": "range",
       "id": "media_border_radius",
-      "label": "Image border radius (rem)",
+      "label": "Image border radius (px)",
       "min": 0,
-      "max": 4,
-      "step": 0.1,
-      "default": 1.2
+      "max": 100,
+      "step": 1,
+      "default": 20
     },
     {
       "type": "checkbox",
       "id": "media_box_shadow_visible",
       "label": "Show image box shadow",
       "default": false
+    },
+    {
+      "type": "color",
+      "id": "media_box_shadow_color",
+      "label": "Image box shadow color",
+      "default": "rgba(0,0,0,0.08)"
     },
     {
       "type": "range",
@@ -927,30 +929,18 @@
         { "type": "richtext", "id": "details_1", "label": "Details 1" },
         { "type": "image_picker", "id": "icon_2", "label": "Icon 2" },
         { "type": "richtext", "id": "details_2", "label": "Details 2" },
-        { "type": "color", "id": "card_bg_1", "label": "Card 1 background color", "default": "#fff" },
+        { "type": "color", "id": "card_bg", "label": "Card background color", "default": "#fff" },
         {
           "type": "range",
-          "id": "card_radius_1",
-          "label": "Card 1 border radius (rem)",
+          "id": "card_radius",
+          "label": "Card border radius (px)",
           "min": 0,
-          "max": 4,
-          "step": 0.1,
-          "default": 1.2
+          "max": 100,
+          "step": 1,
+          "default": 20
         },
-        { "type": "color", "id": "card_shadow_color_1", "label": "Card 1 box shadow color", "default": "#FF69B4" },
-        { "type": "color", "id": "icon_shadow_color_1", "label": "Card 1 icon box shadow color", "default": "#FF0080" },
-        { "type": "color", "id": "card_bg_2", "label": "Card 2 background color", "default": "#fff" },
-        {
-          "type": "range",
-          "id": "card_radius_2",
-          "label": "Card 2 border radius (rem)",
-          "min": 0,
-          "max": 4,
-          "step": 0.1,
-          "default": 1.2
-        },
-        { "type": "color", "id": "card_shadow_color_2", "label": "Card 2 box shadow color", "default": "#FF69B4" },
-        { "type": "color", "id": "icon_shadow_color_2", "label": "Card 2 icon box shadow color", "default": "#FF0080" }
+        { "type": "color", "id": "card_shadow_color", "label": "Card box shadow color", "default": "#FF69B4" },
+        { "type": "color", "id": "icon_shadow_color", "label": "Icon box shadow color", "default": "#FF0080" }
       ]
     }
   ],
