--- a/sections/custom-image-with-text.liquid
+++ b/sections/custom-image-with-text.liquid
@@ -31,7 +31,7 @@
   }
 
   .section-{{ section.id }}-padding .image-with-text__content {
-    padding: 4rem 0 5rem;
+    padding: 4rem 2rem 5rem;
   }
 
   @media (min-width: 768px) {
