--- a/sections/our-promises.liquid
+++ b/sections/our-promises.liquid
@@ -52,9 +52,9 @@
     }
     .section-{{ section.id }} .section-{{ section.id }}__list {
         flex-flow: row wrap;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
-        gap: 0;
+        gap: 3rem;
     }
     .section-{{ section.id }} .section-{{ section.id }}__item {
         width: auto;
