Refactor marquee text divider section to improve code clarity by commenting out unnecessary conditional logic for star SVG rendering. This change enhances maintainability while preserving the visual functionality of the text divider.

--- a/sections/marquee-text-divider.liquid
+++ b/sections/marquee-text-divider.liquid
@@ -54,22 +54,31 @@
       {% for block in section.blocks %}
         <span class="marquee-text-divider__item-{{ section.id }}">
           {{- block.settings.text }}
-          {% unless forloop.last %}
-            <span class="marquee-text-divider__star-{{ section.id }}">
-              {{- 'star.svg' | asset_url | img_tag: '', 'divider star' -}}
-            </span>
-          {% endunless %}
+          {% comment %} {% unless forloop.last %} {% endcomment %}
+          <span class="marquee-text-divider__star-{{ section.id }}">
+            {{- 'star.svg' | asset_url | img_tag: '', 'divider star' -}}
+          </span>
+          {% comment %} {% endunless %} {% endcomment %}
         </span>
       {% endfor %}
-      {% comment %} Duplicate for seamless loop {% endcomment %}
       {% for block in section.blocks %}
         <span class="marquee-text-divider__item-{{ section.id }}">
           {{- block.settings.text }}
-          {% unless forloop.last %}
-            <span class="marquee-text-divider__star-{{ section.id }}">
-              {{- 'star.svg' | asset_url | img_tag: '', 'divider star' -}}
-            </span>
-          {% endunless %}
+          {% comment %} {% unless forloop.last %} {% endcomment %}
+          <span class="marquee-text-divider__star-{{ section.id }}">
+            {{- 'star.svg' | asset_url | img_tag: '', 'divider star' -}}
+          </span>
+          {% comment %} {% endunless %} {% endcomment %}
+        </span>
+      {% endfor %}
+      {% for block in section.blocks %}
+        <span class="marquee-text-divider__item-{{ section.id }}">
+          {{- block.settings.text }}
+          {% comment %} {% unless forloop.last %} {% endcomment %}
+          <span class="marquee-text-divider__star-{{ section.id }}">
+            {{- 'star.svg' | asset_url | img_tag: '', 'divider star' -}}
+          </span>
+          {% comment %} {% endunless %} {% endcomment %}
         </span>
       {% endfor %}
     </div>
